[package]
name = "rustclock"
default-run = "festamp"
version = "1.0.0"
authors = ["Graham Breed <gbreed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
num-integer = "0.1.42"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true
panic = 'abort'
